kubernetes/dbinit.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: dbinit
  labels:
    provider: dbinit
    environ: dev
spec:
  restartPolicy: Never
  containers:
  - name: 12factor-dbinit
    image: alainchiasson/12factor-dbinit
