kubernetes/app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    provider: app
    heritage: none
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    provider: app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app
  labels:
    provider: app
    heritage: none
spec:
  replicas: 1
  template:
    metadata:
      labels:
        provider: app
    spec:
      containers:
      - name: 12factor
        image: alainchiasson/12factor
        ports:
        - containerPort: 5000
