kubernetes/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    provider: mysql
    heritage: none
spec:
  ports:
  - port: 3306
  selector:
    provider: mysql
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  labels:
    provider: mysql
    heritage: none
spec:
  replicas: 1
  template:
    metadata:
      labels:
        provider: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
