kubernetes/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: 12factor
spec:
  rules:
  - http:
      paths:
      - path: /users
        backend:
          serviceName: app
          servicePort: 80
      - path: /version
        backend:
          serviceName: app
          servicePort: 80
